openshift_exports/cluster_export/bbitai-dev-2026-03-20T15_31_03Z/bbitai-dev/Ingress_networking.k8s.io_v1_bbitai-dev_photo-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web8090
    traefik.ingress.kubernetes.io/router.middlewares: default-ui-stripprefix@kubernetescrd
  name: photo-ui-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: photo-ui
            port:
              number: 80
        path: /ui
        pathType: Prefix
